fix: proposal section z-index accessibility problem

--- a/src/css/proposal.css
+++ b/src/css/proposal.css
@@ -6,13 +6,14 @@
     background-image: var(--green_linear);
     padding: 40px 20px;
     border-radius: 16px;
-
-    position: relative;
-    z-index: -3;
 }
 
 .proposal-section-title {
     margin-bottom: 65px;
+}
+
+.leave-application-card-wrapper {
+    position: relative;
 }
 
 .leave-application-card {
@@ -21,6 +22,7 @@
     border-radius: 16px;
 
     position: relative;
+    z-index: 3;
 }
 
 .leave-application-card-name {
@@ -87,19 +89,19 @@
     width: 100%;
     height: 100%;
     scale: 0.94;
-    border-radius: inherit;
+    border-radius: 16px;
 }
 
 #backcard-1 {
     background-color: rgba(255, 255, 255, 0.5);
-    z-index: -1;
+    z-index: 2;
     transform: rotate(11deg);
 }
 
 #backcard-2 {
     left: 7px;
     background-color: var(--light-green);
-    z-index: -2;
+    z-index: 1;
     transform: rotate(-9deg);
 }
 
